
syntax = "proto3";

package grpc;

option go_package = "go-grpc-clean/internal/pb";

enum MessageStatus {
    OK = 0;
    BAD_REQUEST = 1;
    UNAUTHORIZED = 2;
    FORBIDDEN = 3;
    NOT_FOUND = 4;    
}

enum UserStatus {
    ACTIVE = 0;
    INACTIVE = 1;
    DELETED = 2;
    SUSPENDED = 3;
}

message User {
	optional int32 id = 1;
    optional string referralCode = 2;
	string userName = 3;
	string email = 4;
    optional UserStatus status = 5;
    optional string createdAt = 6;
    optional string updatedAt = 7;
}

message CreateUserRequest {
    User user = 1;
}

message GetUserRequest {
	string referralCode = 1;
}

message UpdateUserRequest {
    string referralCode = 1;
    User user = 2;
}

message DeleteUserRequest {
    string referralCode = 1;
}

message GetUserByUserNameRequest {
    optional string userName = 1;
    optional string email = 2;
}

message UserResponse {
    MessageStatus status = 1;
	User data = 2;
}

service UserService {
	rpc CreateUser(CreateUserRequest) returns (UserResponse);
	rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (UserResponse);
    rpc GetUserByUserName(GetUserByUserNameRequest) returns(UserResponse);
}
